--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p class="fs-5">桌號：<span id="table-number"></span></p>
         </div>
         <div id="seating-chart" class="p-2">
-            <!-- <img src="/1.png" alt="Seating Chart" class="img-fluid"> -->
+            <img src="images/1.png" alt="Seating Chart" class="img-fluid">
         </div>
     </div>
 
